objects/MOPS_Email__c.object
<CustomObject>
    <description>Track email broadcasts manged by marketing ops through the Marketing Ops Project object.</description>
    <fields>
        <fullName>Blast_Date__c</fullName>
        <description>Day the email blast is to be sent</description>
        <label>Blast Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Title__c</fullName>
        <formula>Marketing_Ops_Project__r.Campaign_Lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Type__c</fullName>
        <description>Types of Email blasts</description>
        <label>Email Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generic Send</fullName>
                </value>
                <value>
                    <fullName>Save the Date</fullName>
                </value>
                <value>
                    <fullName>Invite</fullName>
                </value>
                <value>
                    <fullName>Reminder</fullName>
                </value>
                <value>
                    <fullName>Follow-Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Ops_Project__c</fullName>
        <label>Marketing Ops Project</label>
        <referenceTo>Marketing_OPS_Project__c</referenceTo>
        <relationshipLabel>MOPS Emails</relationshipLabel>
        <relationshipName>MOPS_Emails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>MOPS Email</label>
    <nameField>
        <displayFormat>MOPE-{0000}</displayFormat>
        <label>MOPS Email ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MOPS Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>